--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 *.pem
+
+# IDE
+.idea/
+.vscode/
+*.iml
+
+# Dependencies
+node_modules/
+vendor/
+.env
+
+# OS generated files
+.DS_Store
+Thumbs.db
